--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@
 :root {
     --primary--clr:#57ab24;
     --secondary--clr:#e41d34;
-    --background--clr:#303030;
-    --text--color--clr:#f8f9fa;
-    --heading--h1:#f8f9fa;
-    --heading--h2--h3:#303030;
+    --background--clr:#2b2d2a;;
+    --text--color--clr:#f3f5f2;
+    --heading--h1:#f3f5f2;
+    --heading--h2--h3:#2b2d2a;;
 }
 *{
     margin:0;
@@ -14,6 +14,10 @@
     border:0;
 }
 /*
+I stopped using the followed code, 
+as the problem was with
+setting width:100vw for the 
+background images and body 
 html {
     overflow-x: hidden; 
 }*/
@@ -26,7 +30,10 @@ body {
     letter-spacing: 1px;
     margin:0;
     height:100vh;
-  /*  width: 100vw;*/
+  /* 
+  I stopped using the followed code, as it caused the
+  horizontal scrolling
+   width: 100vw;*/
 }
 
 h1,
@@ -56,7 +63,7 @@ h3 {
     font-weight: 300;
  }
  
- /*---------------------------- NAVIGATION --------------------*/
+ /*---------------------------- NAVIGATION ------------------------*/
   .logo {
     width: 110px;
     height: 58px;
@@ -109,7 +116,7 @@ h3 {
     outline-color:rgb(87 171 36);
 }
 
-/* ----------------------------------------SITE HOME/WELCOME - jumbotron ---------------- */
+/* ------------------------------ HOME/WELCOME - jumbotron ---------------- */
 .welcome-sign-top {
     font-size: 24px;
     letter-spacing: 1px;
@@ -126,7 +133,6 @@ h3 {
 hr {   
     width: 35%;
     height:3px;
-    border: 0;
     border: 0;
     background-color: var(--secondary--clr);
     margin: 0 auto;
@@ -175,8 +181,12 @@ hr {
     padding-bottom: 6px;
 }
 
-/* ------------------------------------------------------ ABOUT ------------------------------- */
-/*-----------------#about needed to lover the header out from the navbar in the about section -----------*/ 
+/* --------------------------------------- ABOUT ------------------------------- */
+/*
+#about needed to lover the header out from 
+the navbar which overlying the content 
+in the about section
+*/ 
 #about {
     border-top:3px solid transparent;
     margin-top: -3px;
@@ -239,10 +249,14 @@ h3 {
 
 /* ----------------------------------------------------------------- TOURS ------------------------------------------- */
 
-/*-----------------#tours needed to lover the header out from the navbar in the about section -----------*/ 
+/*
+#tours needed to lover the header out from 
+the navbar which overlying the content 
+in the about section
+*/ 
 #tours {
-    border-top:1px solid transparent;
-    margin-top: -1px;
+    border-top:3px solid transparent;
+    margin-top: -px;
     height: auto;
 }
 
@@ -257,7 +271,11 @@ h3 {
     background-image: url('../images/forest.jpg');
     background-position: center;
     background-size: cover;
-    /*width: 100vw;*/
+    /*
+    I stopped using the followed code, 
+    as it caused the horizontal scrolling
+    width: 100vw;
+    */
     height: 800px;
     padding-bottom: 50px;
     background-repeat: no-repeat;
@@ -266,7 +284,7 @@ h3 {
     margin-bottom: 0px; 
 }
 
-/* -------------------------- Credit: w3school snipped code/customized Image Hoover Overlay Fade for the images-------------------------- */
+/* --- Credit: w3school snipped code/customized for Image Hoover Overlay Fade for the images and edited slightly to fit project needs-------------- */
 .card-tours {
     margin-bottom: 2.2rem;
     position: relative;
@@ -316,11 +334,15 @@ h3 {
     color: var(--primary--clr) ;
     text-decoration: none;
 }
-/* ------------------------------------------------------------------- GALLERY --------------------------------------------- */
-/*-----------------#gallery needed to lover the header out from the navbar in the about section -----------*/ 
+/* ----------------------------------------------- GALLERY ----------------------------------------------- */
+/*
+#gallery needed to lover the header out from 
+the navbar which overlying the content
+in the about section 
+*/ 
 #gallery {
-    border-top:7px solid transparent;
-    margin-top: -7px;
+    border-top:3px solid transparent;
+    margin-top: -3px;
 }
 .image-style {
     width: 100%;
@@ -338,7 +360,11 @@ h3 {
 }
 
 /* --------------------------------------------------------------------- CONTACT ------------------------------------------------ */
-/*-----------------#contact needed to lover the header out from the navbar in the about section -----------*/
+/*
+#contact needed to lover the header out from 
+the navbar which overlying the content  
+in the about section
+*/
 #contact {
     border-top:3px solid transparent;
     margin-top: -3px;
@@ -356,7 +382,7 @@ h3 {
 }
 
 .margin {
-    margin-top: 26px;
+    margin-top: 38px;
     margin-bottom: 16px;
     padding-left: 15px;
     padding-right: 15px;
@@ -397,7 +423,11 @@ label {
     background-image: url('../images/happy-girl.jpg');
     background-position: center;
     background-size: cover;
-    /*width: 100vw;*/
+     /*
+    I stopped using the followed code, 
+    as it caused tht horizontal scrolling
+    width: 100vw;
+    */
     height: 800px;
     padding-bottom: 50px;
     background-repeat: no-repeat;
