--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;600;700&family=Special+Elite&display=swap');
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Special+Elite&display=swap');
 
 :root {
-    --primary--clr:#57ab24;
+    --primary--clr:#6cd22d;
     --secondary--clr:#e41d34;
-    --background--clr:#2b2d2a;;
+    --background--clr:#2b2d2a;
     --text--color--clr:#f3f5f2;
     --heading--h1:#f3f5f2;
-    --heading--h2--h3:#2b2d2a;;
+    --heading--h2--h3:#2b2d2a;
+    --btn:#fff;
 }
 *{
     margin:0;
@@ -44,12 +52,12 @@ h4 {
 
  h1 {
     font-size: 1.8rem;
-    color:var(--heading--h1);
+    color: var(--heading--h1);
  }
 
  h2 {
      font-size: 1.3rem;
-     color:var(--heading--h2--h3);
+     color: var(--heading--h2--h3);
      letter-spacing: 1px;
  }
 
@@ -71,19 +79,21 @@ h4 {
  
  /*---------------------------- NAVIGATION ------------------------*/
   .logo {
-    width: 110px;
-    height: 58px;
+    width: 100px;
+    height: auto;
     margin-left: 0px;
-    padding: 5px 0px 5px  10px;
+    padding: 2px 0px 2px  0px;
 }
 
 #navbarNav {
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
 }
 
 .navbar {
     background-color:var(--primary--clr);
-    color: var(--text--color--clr);
+    color: var(--heading--h2--h3);
     margin-bottom: 0;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -103,25 +113,23 @@ h4 {
 }
 
 .navbar .navbar-nav a {
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .navbar .navbar-toggler {
-    color: var(--background--clr);
+    color: var(--text--color--clr);
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: var(--text--color--clr);
+    color: var(--heading--h2--h3);
     text-align: center;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-    color: var(--background--clr);
+    color: var(--text--color--clr);
 }
 
-.navbar .navbar-toggler:focus {
-    outline-color:rgb(87 171 36);
-}
+
 
 /* -------------------------- HOME/WELCOME - jumbotron ---------------- */
 .welcome-sign-top {
@@ -148,16 +156,19 @@ hr {
 /*------------CREDIT: inspiration/code snipped from Whiskey project in Bootstrap and customized----*/
 .home-container {
     background: url('../images/hero-image.jpg') no-repeat bottom center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     width: auto;
     margin-bottom: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .jumbotron {
@@ -169,12 +180,11 @@ hr {
 }
 
 .btn-lg {
-    font-size: 0.7rem;
-    line-height: 1.5;
+    font-size: 0.9rem;
 }
 
 .btn-primary {
-    color: var(--text--color--clr);
+    color: var(--btn);
     background-color: var(--secondary--clr);
     border-color: var(--secondary--clr);
     letter-spacing: 2px;
@@ -185,10 +195,8 @@ hr {
     border-color: var(--primary--clr);
 }
 .btn-style {
-    padding-right: 9px;
-    padding-left: 9px;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding: 9px 8px;
+ 
 }
 
 /* -------------------------------- ABOUT ------------------------------- */
@@ -202,12 +210,15 @@ in the about section
     margin-top: -3px;
     height: auto;
 }
-
+.about-margin {
+    margin-bottom: 3.5rem;
+}
 .tours-style h2 {
     text-align: left;
-    font-weight: 700;
+    font-weight: 600;
     color: var(--text--color--clr);
     padding-bottom: 5px;
+    letter-spacing: 2px;
 }
 
 .heading-text {
@@ -229,14 +240,16 @@ in the about section
 
 .card {
     -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+            flex: 1 1 auto;
     min-height: 1px;
     padding: 0.7rem;
     margin-bottom: 10px;
 }
 
 .card-about:hover {
-    box-shadow: 0px 0px 7px 3px #fff;
+    -webkit-box-shadow: 0px 0px 7px 3px #fff;
+            box-shadow: 0px 0px 7px 3px #fff;
 }
 
 h3 {
@@ -253,6 +266,7 @@ h3 {
     margin-left: 1.5rem;
 }
 
+
 /* ----------------------------- TOURS ---------------------------- */
 
 /*
@@ -264,6 +278,9 @@ in the about section
     border-top:3px solid transparent;
     margin-top: -3px;
     height: auto;
+}
+.tours-margin {
+    margin-bottom: 3.5rem;
 }
 
 .padding {
@@ -310,10 +327,10 @@ in the about section
     width: 100vw;
     */
     height: 800px;
+    width: auto;
     padding-bottom: 50px;
     background-repeat: no-repeat;
     position: relative;
-    font-weight: 300;
     margin-bottom: 0px; 
 }
 
@@ -329,17 +346,23 @@ in the about section
     display: block;
     width: 100%;
     height: auto;
+    -webkit-transition: .5s ease;
+    -o-transition: .5s ease;
     transition: .5s ease;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
 }
 
 .middle {
+    -webkit-transition: .5s ease;
+    -o-transition: .5s ease;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
@@ -385,13 +408,16 @@ in the about section
     border: 6px solid white;
     border-radius: 0.3rem;  
     padding: 4px; 
-    margin-top: 5px;
+    margin-top: 0.3rem;
     margin-bottom:1.2rem;
 }
 
 .image-style:hover {
-    align-items: center;
-    box-shadow: 0px 0px 12px 5px #fff;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: 0px 0px 12px 5px #fff;
+            box-shadow: 0px 0px 12px 5px #fff;
 }
 
 /* ------------------------------------------------- CONTACT --------------------------------------------- */
@@ -407,10 +433,10 @@ in the about section
 }
 
 .contact-sent-btn {
-    padding-top: 0.3rem;
-    padding-bottom: 0.3rem;
-    padding-left: 0.9rem;
-    padding-right: 0.9rem;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
     margin-top: 25px;
     width: auto;
     margin-bottom: 5rem;
@@ -462,10 +488,10 @@ label {
     width: 100vw;
     */
     height: 800px;
+    width: auto;
     padding-bottom: 50px;
     background-repeat: no-repeat;
     position: relative;
-    font-weight: 300;
     margin-bottom: 0px; 
 }
 
@@ -474,8 +500,10 @@ footer {
     width: 100%;
 	bottom: 0px;
 	height: 3.5rem;
-    background-color:rgb(99 175 52);
-    color: var(--text--color--clr);
+    background-color:var(--primary--clr);
+    color: var(--heading--h2--h3);
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	    -webkit-box-align: center;
 	    -ms-flex-align: center;
@@ -505,18 +533,16 @@ footer .contact {
 }
 
 .contact-links a:hover {
-    color:var(--background--clr);
+    color:var(--text--color--clr);
     font-weight: 300;
 }
 
 .contact-links-item a {
-    color: var(--text--color--clr);
-    /*margin-right: 10px;*/
+    color: var(--heading--h2--h3);
     padding-left: 2px;
     text-decoration: none;
     font-size: 0.6rem;
 }
-
 .social-network {
     font-size: 110%;
     width: 40%;
@@ -534,29 +560,29 @@ footer .contact {
 }
 
 .social-network a {
-    color: var(--text--color--clr);
+    color: var(--heading--h2--h3);
 	margin:0.3rem;
 	padding: 0.3rem;
 }
 
 .social-network i:hover {
-    color:var(--background--clr);
+    color:var(--text--color--clr);
 }
 
-/*--------------------------Media to background images for smaller devices------------------------*/
+/*--------------------------Media for background images for smaller devices------------------------*/
  @media screen and (max-width: 1024px){
      #image-contact {
-   /* ---------- Credit Photo by Sebastian Voortman from Pexels ---------- */
-    background-image: url('../images/happy-girl-mobile.jpg');
-    }
+        /* ---------- Credit Photo by Sebastian Voortman from Pexel------- */
+        background-image: url('../images/happy-girl-mobile.jpg');
+        }
     #image-tours {
-    /* ---------- Credit Photo by Eric Sanman from Pexels ---------- */
-        background-image: url('../images/forest-mobile.jpg');
-    }
-    /* ---------- Credit Photo by Lukas Medvedevas from Pexels ---------- */
+        /* ---------- Credit Photo by Eric Sanman from Pexels ---------- */
+            background-image: url('../images/forest-mobile.jpg');
+        }
+        /* -------- Credit Photo by Lukas Medvedevas from Pexels ------ */
     .home-container{
-        background-image: url('../images/hero-image-mobile.jpg') ;
-    }
+            background-image: url('../images/hero-image-mobile.jpg') ;
+        }
  }
 
 /*-------------------------------------------Media for Small devices------------------------------*/
@@ -576,6 +602,9 @@ footer .contact {
     .video-card-tours {
         margin-bottom: 30px;
     }
+    footer {
+        height: 2.3rem;
+    }
 }
 
 /*-------------------------------------------Media for Medium devices devices------------------------------*/
@@ -583,7 +612,6 @@ footer .contact {
     .welcome-sign-top {
         font-size: 34px;
         letter-spacing: 1px;
-        
     }
     .welcome-sign-bottom {
         font-size: 24px;
@@ -593,10 +621,7 @@ footer .contact {
     }
 
     .jumbotron {
-        padding-top: 25px;
-        padding-bottom: 25px;
-        padding-left: 5px;
-         padding-right: 5px;
+        padding: 25px 5px 25px 5px;
     }
     .card-tours {
         margin-left: 7px;
@@ -605,7 +630,7 @@ footer .contact {
         padding-right: 5px;
     }
     .video-card-tours {
-         margin-left: 7px;
+        margin-left: 7px;
         margin-right: 7px
     }
     h1 {
@@ -618,12 +643,6 @@ footer .contact {
     h4 {
         font-size: 1.3rem;
     }
-    /*#about {
-        height: auto;
-    }
-    #tours {
-        height: auto;
-    }*/
     .align-items-center {
         padding-right: 0px;
         padding-left: 0px;
@@ -641,23 +660,74 @@ footer .contact {
 
 /*-------------------------------------------Media for Large devices------------------------------*/
 @media screen and (min-width:1024px){
-/*#about {
-    height: auto;
+    .contact-links i {
+        font-size:1rem;
+        }
+    footer .contact {
+        font-size:1.1rem;
+        }
+    .contact-links-item a {
+        font-size: 0.9rem;
+        }  
+    .navbar {
+        font-size: 1.4rem;
+        }
     }
-#tours {
-    height: auto;
-    }*/
-.contact-links i {
-    font-size:1rem;
+
+/*-------------------------------------------Media for Extra-Large devices------------------------------*/
+@media screen and (min-width:1650px) {
+    .about-margin {
+    margin-bottom: 10rem;
+}
+    .contact-links i {
+        font-size:1.1rem;
     }
-footer .contact {
-    font-size:1.1rem;
+    footer .contact {
+        font-size:1.2rem;
     }
-.contact-links-item a {
-    font-size: 0.9rem;
+    .contact-links-item a {
+        font-size: 1.3rem;
     }  
-.navbar {
-    font-size: 1.4rem;
+    .navbar {
+        font-size: 1.6rem;
     }
+    h1 {
+        font-size: 2.4rem;
+    }
+    h2 {
+        font-size: 1.6rem;
+    } 
+    h3 {
+        font-size: 1.1rem; 
+    } 
+    h4 {
+        font-size: 1.5rem;
+    }
+    body {
+        font-size: 1.3rem;
+    }
+
 }
 
+/*-------------------------------------------Media for landscape orientation------------------------------*/
+@media (max-width: 768px) and (orientation: landscape){
+    footer {
+        height: 2.3rem;
+}
+    .jumbotron {
+        padding:10px 6px 1px 6px  ;
+      
+    }
+    #image-contact {
+        /* ---------- Credit Photo by Sebastian Voortman from Pexel------- */
+        background-image: url('../images/happy-girl-landscape.jpg');
+        }
+     #image-tours {
+        /* ---------- Credit Photo by Eric Sanman from Pexels ---------- */
+            background-image: url('../images/forest-landscape1.jpg');
+        }
+        /* -------- Credit Photo by Lukas Medvedevas from Pexels ------ */
+    .home-container{
+        background-image: url('../images/hero-image-landscape.jpg');
+    }
+}
