--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ html {
 
 body {
     font-family: 'Oswald', sans-serif;     
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     background-color:var(--background--clr);
     color: var(--text--clr);
     height:100vh;
@@ -56,23 +56,23 @@ h4 {
 }
 
  h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
     color: var(--heading--h1);
  }
 
  h2 {
-     font-size: 1.3rem;
+     font-size: 1.4rem;
      color: var(--heading--h2--h3);
      letter-spacing: 1px;
  }
 
  h3 {
-    font-size: 0.9rem; 
+    font-size: 1.1rem; 
     color: var(--heading--h2--h3);
  }
 
  h4 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-bottom: .5rem;
     line-height: 1.3;
     letter-spacing: 1px;
@@ -80,7 +80,9 @@ h4 {
 
  p {
     font-weight: 300;
+    margin-bottom: 1.6rem;
  }
+
  .section-margin-bottom {
     margin-bottom: 6rem;
 }
@@ -88,7 +90,7 @@ h4 {
   .logo {
     width: 100px;
     height: auto;
-    margin-left: 0px;
+    margin-left: 5px;
     padding: 2px 0px 2px  0px;
 }
 
@@ -124,8 +126,10 @@ h4 {
 }
 
 .navbar .navbar-toggler {
-    color: var(--text--clr);
+    color: var(--primary--clr);
+    margin-right: 5px;
 }
+
 
 .navbar-light .navbar-nav .nav-link {
     color: var(--heading--h2--h3);
@@ -182,6 +186,8 @@ h4 {
     padding-top: 15px;
     padding-bottom: 15px;
     margin-bottom: 0;
+    padding-left: 4px;
+    padding-right: 4px;
   }
 
 .btn-lg {
@@ -199,11 +205,10 @@ h4 {
 .btn-primary:hover {
     background-color: var(--secondary--link--clr);
     border-color: var(--secondary--link--clr);
-   
 }
+
 .btn-style {
     padding: 9px 8px;
- 
 }
 
 /* -------------------------------- ABOUT ------------------------------- */
@@ -251,7 +256,6 @@ in the about section
     padding: 0.7rem;
     margin-bottom: 10px;
 }
-
 
 h3 {
     text-align: center;
@@ -309,8 +313,8 @@ in the about section
 }
 
 .tours-images-style {
-        margin-top: 10px;
-        margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #image-tours {
@@ -437,11 +441,9 @@ in the about section
 
 .btn-dark:hover {
     background-color:transparent; 
-    border-color: transparent; 
-    border-width:none;
+    border-width:0px;
     padding: 0px;
 }
-
 
 #image-gallery {
    background-attachment: fixed;
@@ -553,12 +555,13 @@ footer {
 	    -webkit-box-align: center;
 	    -ms-flex-align: center;
 	align-items: center;
-    position: fixed;
+    position: absolute;
     z-index: 1030;
 }
- ul {
+ ul.contact-links {
     margin-top: 0;
-    margin-bottom: 0rem;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 footer .contact {
@@ -566,8 +569,7 @@ footer .contact {
     font-size: 0.8rem;
     font-weight: 300;
     letter-spacing: 2px;
-    margin: 0px 0px;
-    margin-left: 0.8rem;
+    margin: 0px 0px 0px 4px;
 }
 
 .contact-links-item {
@@ -587,8 +589,9 @@ footer .contact {
     color: var(--heading--h2--h3);
     padding-left: 2px;
     text-decoration: none;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 }
+
 .social-network {
     width: 40%;
 	margin: auto 5%;
@@ -603,9 +606,11 @@ footer .contact {
         -ms-flex-align: center;	
     align-items: center;
 }
+
 .social-network li {
 font-size: 1.3rem;
 }
+
 .social-network a {
     color: var(--heading--h2--h3);
 	margin:0.3rem;
@@ -615,6 +620,7 @@ font-size: 1.3rem;
 .social-network i:hover {
     color:var(--text--clr);
 }
+
 /*--------------------------Media for background images for smaller devices------------------------*/
  @media screen and (max-width: 1024px){
     #image-about {
@@ -634,11 +640,14 @@ font-size: 1.3rem;
             background-image: url('../images/hero-image-mobile.jpg') ;
         }
  }
+
 /*-------------------------------------------Media for Small devices------------------------------*/
 @media screen and (min-width:360px){
     .welcome-sign-top {
         font-size: 27px;
         letter-spacing: 1px;
+        padding-left: 2px;
+        padding-right: 2px;
     }
     .welcome-sign-bottom {
         font-size: 20px;
@@ -652,6 +661,7 @@ font-size: 1.3rem;
         margin-bottom: 30px;
     }
 }
+
 /*-------------------------------------------Media for Medium devices devices------------------------------*/
 @media screen and (min-width:768px){
     .welcome-sign-top {
@@ -681,42 +691,41 @@ font-size: 1.3rem;
         font-size: 2.2rem;
     }
     h2 {
-        font-size: 1.4rem;
+        font-size: 1.8rem;
     }
     
     h4 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
     .align-items-center {
         padding-right: 0px;
         padding-left: 0px;
     }
     .contact-links i {
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
     footer .contact {
         font-size: 1rem;
     }
     .contact-links-item a {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }  
+
+    footer{
+        position: fixed;
+    }
 }
+
 /*-------------------------------------------Media for Large devices------------------------------*/
 @media screen and (min-width:1024px){
-    .contact-links i {
-        font-size:1rem;
-        }
     footer .contact {
         font-size:1.1rem;
         }
-    .contact-links-item a {
-        font-size: 0.9rem;
-        }  
     .navbar {
         font-size: 1.4rem;
         }
         body {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
     }
     }
 /*-------------------------------------------Media for Extra-Large devices------------------------------*/
@@ -740,16 +749,16 @@ font-size: 1.3rem;
         font-size: 2.4rem;
     }
     h2 {
-        font-size: 1.6rem;
+        font-size: 1.8rem;
     } 
     h3 {
-        font-size: 1.1rem; 
+        font-size: 1.2rem; 
     } 
     h4 {
         font-size: 1.5rem;
     }
     body {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
 }
 /*-------------------------------------------Media for landscape orientation------------------------------*/
