--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,12 +39,13 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: 'Special Elite', cursive;
+ font-family: 'Special Elite', cursive;
 }
 
  h1 {
     font-size: 2rem;
     color: var(--heading--h1);
+    font-weight: 600;
  }
 
  h2 {
@@ -62,10 +63,10 @@ h4 {
 }
 
  h4 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     margin-bottom: .5rem;
     line-height: 1.3;
-    letter-spacing: 1px;
+    font-weight: 600;
  }
 
  p {
@@ -119,7 +120,9 @@ h4 {
     color: var(--primary--clr);
     margin-right: 5px;
 }
-
+.navbar-light .navbar-toggler {
+    border-color: transparent;
+}
 
 .navbar-light .navbar-nav .nav-link {
     color: var(--heading--h2--h3);
@@ -155,6 +158,7 @@ h4 {
 /*------------CREDIT: inspiration/code snipped from Whiskey project in Bootstrap and customized----*/
 .home-container {
     background: url('../images/hero-image.jpg') no-repeat bottom center fixed;
+    background-color:var(--background--clr);
     background-size: cover;
     height: 100%;
     width: auto;
@@ -238,7 +242,9 @@ h4 {
     padding: 0.4rem;
     margin-bottom: 15px;
 }
-
+.content-item-text {
+    padding-right: 16px;
+}
 
 
 .fa-li {
@@ -291,6 +297,7 @@ h4 {
 #image-tours {
    background-attachment: fixed;
    /* ---------- Credit Photo by Eric Sanman from Pexels ---------- */
+    background-color:var(--background--clr);
     background-image: url('../images/forest.jpg');
     background-position: center;
     background-size: cover;
@@ -414,6 +421,7 @@ in the about section
 #image-gallery {
    background-attachment: fixed;
    /* ---------- Credit Photo by Lumn from Pexels ---------- */
+    background-color:var(--background--clr);
     background-image: url('../images/shoes.jpg');
     background-position: center;
     background-size: cover;
@@ -445,7 +453,7 @@ in the about section
 }
 
 .margin {
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
@@ -483,6 +491,7 @@ label {
 #image-contact {
    background-attachment: fixed;
    /* ---------- Credit Photo by Sebastian Voortman from Pexels ---------- */
+    background-color:var(--background--clr);
     background-image: url('../images/happy-girl.jpg');
     background-position: center;
     background-size: cover;
@@ -540,7 +549,7 @@ footer .contact {
 
 .contact-links-item a {
     color: var(--heading--h2--h3);
-    padding-left: 2px;
+    padding-left: 15px;
     text-decoration: none;
     font-size: 0.6rem;
 }
@@ -608,7 +617,7 @@ font-size: 1.3rem;
         padding-left: 12px;
     }
     .card {
-        margin-bottom: 10px;
+        margin-bottom: 25px;
     }
     .video-card-tours {
         margin-bottom: 30px;
@@ -646,7 +655,6 @@ font-size: 1.3rem;
     h2 {
         font-size: 1.8rem;
     }
-    
     h4 {
         font-size: 1.5rem;
     }
@@ -663,7 +671,6 @@ font-size: 1.3rem;
     .contact-links-item a {
         font-size: 1rem;
     }  
-
     footer{
         position: fixed;
     }
@@ -677,8 +684,8 @@ font-size: 1.3rem;
     .navbar {
         font-size: 1.4rem;
         }
-        body {
-        font-size: 1.4rem;
+    body {
+        font-size: 1.3rem;
     }
 }
 /*-------------------------------------------Media for Extra-Large devices------------------------------*/
@@ -700,24 +707,15 @@ font-size: 1.3rem;
     }
     h1 {
         font-size: 2.4rem;
-    }
-    h2 {
-        font-size: 1.8rem;
     } 
     h3 {
         font-size: 1.2rem; 
-    } 
-    h4 {
-        font-size: 1.5rem;
-    }
-    body {
-        font-size: 1.5rem;
-    }
+    }     
 }
 /*-------------------------------------------Media for landscape orientation------------------------------*/
 @media (max-width: 768px) and (orientation: landscape){
     footer {
-        height: 2.3rem;
+       position: fixed;
     }
     .jumbotron {
         padding: 10px 6px 1px 6px;
